--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,14 @@
 language: python
+
+services:
+  - docker
 python:
         - "2.7"
-install: 
+install:
         - make deps
-script: 
+script:
         - make lint
         - make test
+
+after_success:
+  - make docker_build
